<resources>
    <string name="app_name">SuperHeroApp</string>
    <string name="marvel_super_heroes">Marvel Super Heroes</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="no_description">No description</string>
    <string name="comics">Comics</string>
    <string name="no_comics">No Comics</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_photo">Add Photo</string>
</resources>